improve  few solutions

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -33,6 +33,7 @@
 \usepackage{color,hyperref}
 \hypersetup{colorlinks=true, linkcolor=blue, filecolor=magenta, urlcolor=cyan}
 
+
 %%% Теоремы и доказательства
 %\renewcommand\qedsymbol{$\blacksquare$}
 \declaretheoremstyle[
@@ -48,13 +49,41 @@
 \declaretheorem[name=Решение,numbered=no,style=solution]{solution}
 
 
+%%% Dashed box
+%\usepackage[style=1]{mdframed}
+\usepackage{environ,tikz}
+\NewEnviron{elaboration}{
+	\par
+	\begin{tikzpicture}
+		\node[rectangle,minimum width=0.9\textwidth] (m) {
+			\begin{minipage}{0.85\textwidth}
+				\BODY
+			\end{minipage}
+		};
+		\draw[dashed] (m.south west) rectangle (m.north east);
+	\end{tikzpicture}
+	\par
+}
+
 %%% Макросы
 \def\IFF{$\;\Longleftrightarrow\;$}
 \def\CHI{\mathcal{X}}
 \def\TODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
 \def\Gwave{$\tilde{G}$}
-\newcommand\CenterFigure[2]{\begin{figure}[H]\centering\includegraphics[width=#1]{#2}\end{figure}}
-\newcommand\CenterFigureCaption[3]{\begin{figure}[H]\centering\includegraphics[width=#1]{#2}\caption{#3}\end{figure}}
+
+\newcommand\CenterFigure[2]{
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#1]{#2}
+	\end{figure}
+}
+\newcommand\CenterFigureCaption[3]{
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=#1]{#2}
+		\caption{#3}
+	\end{figure}
+}
 
 
 %%% Заголовок
@@ -341,10 +370,12 @@
 \end{solution}
 
 
+
 \begin{problem}
 	Доказать, что плоский граф \Gwave является двудольным тогда и только тогда, когда двойственный к нему граф $\tilde{G^*}$ является плоским эйлеровым графом.
 \end{problem}
-\begin{solution}
+
+\begin{solution}[Моё длинное]
 	Мы знаем, что граф является эйлеровым тогда и только тогда, когда \textit{он связный} и все его вершины имеют чётную степень. Но двойственный граф \textit{всегда связный}, а его вершинам взаимно однозначно соответствуют грани исходного плоского графа. То есть надо доказать, что плоский граф является двудольным тогда и только тогда, когда все его грани имеют чётную степень.
 	
 	\TODO Сократить \href{https://stepik.org/lesson/12345/step/8}{доказательство} с помощью утверждения ``граф двудольный \IFF в нём любой цикл чётный''.
@@ -369,6 +400,17 @@
 	
 	4) Если граф несвязный, разбиваем его на 1-связные компоненты, каждая из которых согласно случаю 3 будет двудольной. Значит, и весь граф двудольный.Необходимость доказана, как и утверждение в целом.
 \end{solution}
+
+\begin{solution}[Эталонное]
+	Заметим, что если все грани плоского графа \Gwave имеют четную степень, то четную же степень имеют и все вершины двойственного графа $\tilde{G^*}$. Так как двойственный граф всегда является связным, то это означает, что двойственный к плоскому графу \Gwave, у которого все грани имеют четную степень, является эйлеровым графом. 
+	
+	Осталось понять, что собой представляет плоский граф, в котором любая грань имеет четную степень. Покажем, что плоский граф имеет все грани четной степени тогда и только тогда, когда он является двудольным графом.
+	
+	В одну сторону это довольно очевидно --- если в графе \Gwave имеется грань нечетной степени, то это означает, что в исходном графе $G$ имеется цикл нечетной длины. Следовательно, такой граф двудольным не является.
+	
+	Пусть теперь \Gwave есть граф, все грани которого имеют четную степень. Рассмотрим в этом графе цикл $C$. Любая грань графа \Gwave лежит целиком либо внутри цикла $C$, либо снаружи этого цикла. Рассмотрим все грани, попавшие внутрь цикла $C$. Для того, чтобы сосчитать длину цикла $C$, нам нужно просуммировать степени всех этих граней, а затем вычесть удвоенное количество ребер, не принадлежащих этому циклу. Так как и то, и другое есть четные числа, то длина цикла $C$ также представляет собой четное число. Следовательно, граф \Gwave является двудольным.
+\end{solution}
+
 
 
 \begin{problem}
@@ -440,11 +482,21 @@
 \end{problem}
 \begin{solution}
 	Граф очевидно должен быть простым, иначе в нём были бы возможны петли и мультирёбра, доказать какое либо ограничение на число рёбер было бы не возможно и формулировка задачи потеряла бы смысл.
-		
-	Поскольку по условию ограничивающий любую грань цикл не может иметь длину 3, то его минимальная длина равна 4, т.е. $\deg(f_i) \geqslant 4$. Т.к. сумма степеней всех граней равна $2m$, то $2m = \sum{\deg(f_i)} \geqslant 4r$. Отсюда $2r \leqslant m$.
-	
+
+	Поскольку по условию ограничивающий любую грань цикл не может иметь длину 3, то его минимальная длина равна 4, т.е. $\deg(f_i) \geqslant 4$. Т.к. сумма степеней всех граней равна $2m$, то $2m = \sum{\deg(f_i)} \geqslant 4r$. Отсюда $2r \leqslant m$. 
+	(Случай без циклов тривиален -- любое дерево раскрашиваемо в 2 цвета.)
+
 	Умножая на 2 формулу Эйлера для планарных графов $n+r=2+m$, получаем $4+2m-2n=2r \leqslant m$, откуда $4+m \leqslant 2n$, т.е. $m \leqslant 2n-4$.
-	
+
+	%\begin{mdframed}[tikzsetting={draw=black,dashed,line width=2pt,dash pattern=on 10pt off 3pt},linecolor=black,outerlinewidth=1pt]
+	\begin{elaboration}
+		\textit{Другой, более короткий способ доказать $m \leqslant 2n-4$}:
+		
+		Поскольку в нашем (плоском) графе нет треугольников, мы можем внутри каждой грани провести еще как минимум одно ребро, и граф все равно останется плоским; количество вершин же при этом не изменится. То есть неравенство и после этого будет верным: $E'=E+F\leq3V-6$.
+		
+		Далее по формуле Эйлера...
+	\end{elaboration}
+
 	Сумма степеней всех вершин $\sum \deg(v_i) \geqslant \sum \delta = n\delta$, где $\delta$ -- минимальная степень вершины. С другой стороны, $\sum \deg(v_i) = 2m$, причём $m \leqslant 2n-4$, как показано выше. Отсюда $n\delta \leqslant 2m \leqslant 4n-8$, т.е. $(\delta - 4)n \leqslant -8$. Справа число меньше нуля. Слева $n>0$ строго положительно, а значит $\delta-4<0$ строго отрицательно. Получаем, что минимальная степень вершины $\delta < 4$, то есть в графе всегда найдётся какая-то вершина степени $\deg(v) \leqslant 3$.
 	
 	Докажем по индукции, что вершины графа можно раскрасить в 4 цвета. База индукции: в случае 1,2 или 3 вершин утверждение тривиально. Шаг индукции: предположим, что утверждение верно для $n$ вершин и рассмотрим граф из $n+1$ вершины. Как показано выше, у нас найдётся вершина, у которой $\deg(v) \leqslant 3$. Временно удалим её. По предположению индукции, оставшийся граф можно раскрасить в 4 цвета. Сделаем это и вернём вершину. У неё не более 3 соседей, то есть даже в худшем случае соседи имеют не более 3 разных цветов, а значит вершину можно раскрасить 4-м цветом, ч.т.д.
