--- a/matan-stepik/matan.tex
+++ b/matan-stepik/matan.tex
@@ -63,28 +63,27 @@ bodyfont=\normalfont, qed=\qedsymbol
 \declaretheorem[name=Решение,numbered=no,style=solution]{solution}
 
 % math mode macros
-\def\.{\;\;}
 \def\DS{\displaystyle}
+\def\NN{\mathbb{N}}
+\def\RR{\mathbb{R}}
+\def\.{\;\;}
+\def\on{\!:}
 \def\eps{\varepsilon}
-\def\ntoinf{n \to \infty}
+\def\ntoinf{n\to\infty}
 \def\ringU{\mathring{U}}
-\def\mathN{\mathbb{N}}
-\def\mathR{\mathbb{R}}
 \def\leqs{\leqslant}
 \def\geqs{\geqslant}
-\def\on{\!:}
 \def\intab{\left<a,b\right>}
 
 % text mode macros
-\def\circleone{\ding{192}$\;$}
-\def\circletwo{\ding{193}$\;$}
-\def\lets {$\gimel\;$}
-\def\iff {$\;\Longleftrightarrow\;$}
-\def\any {$\forall\;$}
-\def\rowak{$\DS\sum_{k=1}^{\infty}a_k$}
-\def\rowbk{$\DS\sum_{k=1}^{\infty}b_k$}
-\def\todo {\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
-\def\vignette {\vspace{48pt} \noindent \hrulefill~ \raisebox{-8pt}[10pt][10pt]{\Huge\ding{102}}~ \hrulefill}
+\def\circleone{\ding{192}\space}
+\def\circletwo{\ding{193}\space}
+\def\lets{{\huge$\lrcorner$}\space}
+\def\iff{$\;\Longleftrightarrow\;$}
+\def\any{$\forall\;$}
+\def\rowak{$\DS\sum_{k=1}^{\infty}a_k$\space}
+\def\todo{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
+\def\vignette{\vspace{48pt} \noindent \hrulefill~ \raisebox{-8pt}[10pt][10pt]{\Huge\ding{102}}~ \hrulefill}
 
 % figures
 
@@ -123,48 +122,57 @@ bodyfont=\normalfont, qed=\qedsymbol
 \subsection{Предел последовательности}
 
 \begin{definition}[Предел последовательности]
-	\[ \lim_{\ntoinf} x_n = l \]
+	$\DS \lim_{\ntoinf} x_n = a $
 	\begin{itemize}
-		\item При любом $\eps>0$ вне интервала $(l-\eps,l+\eps)$
+		\item При любом $\eps>0$ вне интервала $(a-\eps,a+\eps)$
 			  находится лишь конечное число членов последовательности
-		\item $\forall \eps>0 \quad \exists N \quad \forall n>N \quad |x_n - l|<\eps$
+		\item $\forall \eps>0 \. \exists N \. \forall n>N \. |x_n - a|<\eps$
 	\end{itemize}
 \end{definition}
+\bigskip
 
-\begin{property}
-	Свойства последовательностей:
-	\begin{itemize}
+Свойства последовательностей:
+\begin{itemize}
 	\item Не может иметь двух различных пределов
 	\item Если имеет предел, то $|x_n| \leqs M$
-	\item Переход к пределу в неравенстве: \[
-		\lim_{\ntoinf}x_n=a, \lim_{\ntoinf}y_n=b, x_n \leqs y_n
-		\implies a \leqs b
-		\]
 	\item Пределы можно складывать, вычитать, умножать, делить, брать модуль
-	\end{itemize}
+\end{itemize}
+\bigskip
+
+\begin{property}[Переход к пределу в неравенстве]
+\[ \lim_{\ntoinf}x_n=a ,\; \lim_{\ntoinf}y_n=b ,\; x_n \leqs y_n
+   \implies a \leqs b \]
 \end{property}
+\begin{proof} От противного \end{proof}
+\bigskip
 
 \begin{theorem}[О двух милиционерах]
-	\[ a_n \leqs b_n \leqs c_n , \quad
+	\[ a_n \leqs c_n \leqs b_n , \quad
 	   \lim_{\ntoinf}a_n = \lim_{\ntoinf}b_n = A
 	   \implies \lim_{\ntoinf}c_n = A \]
 \end{theorem}
+\begin{proof} По определению \end{proof}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Арифметические операции с пределами}
 
-Арифметические операции с конечными пределами...
+\begin{property}
+	Конечные пределы можно складывать, вычитать, умножать,
+	делить (нижний д.б. $\ne0$) и брать модуль.
+\end{property}
+\begin{proof} С умом подбираем $\eps$ и используем ограниченность... \end{proof}
+\bigskip
 
 \begin{definition}[Бесконечный предел] \[
 	\lim_{\ntoinf} x_n = +\infty
 	\qquad\equiv\qquad
 	\forall E \. \exists N \. \forall n>N \. x_n>E
-	\]
+\]
 \end{definition}
 
 \begin{theorem}
-	\lets $x_n \neq 0$. $x_n$ -- беск. большая \iff $\frac1{x_n}$ -- беск. малая
+	\lets $x_n \neq 0$. $x_n$ -- беск. большая \iff $\DS\frac1{x_n}$ -- беск. малая
 \end{theorem}
 
 \begin{property}
@@ -175,6 +183,7 @@ bodyfont=\normalfont, qed=\qedsymbol
 		\item Произвед. беск. малой на ограниченную -- беск. малая
 	\end{enumerate}
 \end{property}
+\bigskip
 
 Арифметические операции с бесконечностями...
 
@@ -187,13 +196,14 @@ bodyfont=\normalfont, qed=\qedsymbol
 		\item Аксиомы поля (9 штук)
 		\item Аксимомы порядка (5 штук)
 		\item Аксиома Архимеда:
-				$ \forall\. x,y>0 \. \exists \; n \in \mathN \;: nx>y $
+				$ \forall\. x,y>0 \. \exists \; n \in \NN \;: nx>y $
 		\item Аксиома полноты:
 			Пусть $[a_1,b_1] \supset [a_2,b_2] \supset [a_3,b_3] \supset...$.
-			Тогда существует число $c \in \mathR$, принадлежащее всем отрезкам:
+			Тогда существует число $c \in \RR$, принадлежащее всем отрезкам:
 			$\DS c \in \bigcap_{n=1}^{\infty} [a_n,b_n]$
 	\end{itemize}
 \end{definition}
+\bigskip
 
 \begin{theorem}[О стягивающихся отрезках] \ \\
 	Пусть $[a_1,b_1] \supset [a_2,b_2] \supset [a_3,b_3] \supset ...$
@@ -202,6 +212,8 @@ bodyfont=\normalfont, qed=\qedsymbol
 	$\DS \{c\} = \bigcap_{n=1}^{\infty} [a_n,b_n]$, причём
 	$\DS \lim_{\ntoinf}a_n = \lim_{\ntoinf}b_n = c$
 \end{theorem}
+\begin{proof} По теореме о двух милиционерах \end{proof}
+\bigskip
 
 \begin{definition}
 	\lets $E$ -- непустое множество \\
@@ -214,35 +226,46 @@ bodyfont=\normalfont, qed=\qedsymbol
 		\end{cases*}
 	\]
 \end{definition}
+\bigskip
 
 \begin{theorem}
 	Всякое непустое ограниченное сверху (снизу) множество имеет $\sup$ ($\inf$)
 \end{theorem}
-\begin{proof} Делением отрезка пополам... \end{proof}
+\begin{proof} Делением отрезка пополам, затем переход к пределу в неравенстве... \end{proof}
+\bigskip
 
 \begin{theorem}  \ \\
 	\begin{itemize}
 		\item Монотонно возрастающая ограниченная сверху последовательность сходится.
 		\item Монотонно убывающая ограниченная снизу последовательность сходится.
+	\end{itemize}
+\end{theorem}
+\begin{proof} Супремум... \end{proof}
+\bigskip
+
+\begin{theorem}  \ \\
+	\begin{itemize}
 		\item Неограниченная сверху возрастающая последовательность стремится к $+\infty$.
 		\item Неограниченная снизу убывающая последовательность стремится к $-\infty$.
 	\end{itemize}
 \end{theorem}
+\begin{proof} По определению \end{proof}
+\bigskip
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Определение числа $e$}
 
 \begin{lemma}[Неравенство Бернулли]
-	\[ x>-1, n \in \mathN \implies (1+x)^n \geqs 1+nx \]
+	\[ x>-1, n \in \NN \implies (1+x)^n \geqs 1+nx \]
 \end{lemma}
-\begin{proof} По индукции... \end{proof}
+\begin{proof} По индукции \end{proof}
 
 \begin{corollary}
-	\[ x>-1, n \in \mathN \implies \sqrt[n]{1+x} \leqs 1+\frac{x}{n} \]
+	\[ x>-1, n \in \NN \implies \sqrt[n]{1+x} \leqs 1+\frac{x}{n} \]
 \end{corollary}
 
-\[ \lim_{\ntoinf} \frac{a^n}{n^k} = +\infty \quad a>1, \; k \in \mathN \]
+\[ \lim_{\ntoinf} \frac{a^n}{n^k} = +\infty \quad a>1, \; k \in \NN \]
 
 \[ \lim_{\ntoinf} \sqrt[n]{a} = 1 \quad a>0 \]
 
@@ -255,34 +278,49 @@ bodyfont=\normalfont, qed=\qedsymbol
 \begin{property}
 	\[ \{ a_n \} \to A \implies \{ a_{n_k} \} \to A \]
 \end{property}
+\begin{proof} По определению \end{proof}
+\bigskip
 
 \begin{theorem}[Больцано-Вейерштрасса]
 	Из всякой ограниченной последовательности можно выделить сходящуюся (к конечному пределу) подпоследовательность
 \end{theorem}
+\begin{proof}
+	Делим содержащий последовательность отрезок пополам так,
+	чтобы в нём оставалась бесконечная подпоследовательность.
+	Далее по теореме о двух милиционерах.
+\end{proof}
+\bigskip
 
 \begin{theorem}[Расширение теоремы Больцано-Вейерштрасса]  \ \\
 	\begin{itemize}
-		\item Из неограниченной сверху последовательности можно выделить подпоследовательность, сходящуюся к $+\infty$.
-		\item Из неограниченной снизу последовательности можно выделить подпоследовательность, сходящуюся к $-\infty$.
+		\item Из неограниченной сверху последовательности
+			  можно выделить подпоследовательность, сходящуюся к $+\infty$.
+		\item Из неограниченной снизу последовательности
+			  можно выделить подпоследовательность, сходящуюся к $-\infty$.
 	\end{itemize}
 \end{theorem}
+\bigskip
 
 \begin{corollary}
-	Из любой последовательности можно выделить под-последовательность, имеющую конечный \textit{или бесконечный} предел.
+	Из любой последовательности можно выделить под-последовательность,
+	имеющую конечный \textit{или бесконечный} предел.
 \end{corollary}
+\bigskip
+
 
 \begin{definition}
 	Последовательность фундаментальна, если
-	$\forall \eps>0 \quad \exists N \quad \forall m,n \geqs N \quad |x_m - x_n|<\eps$
+	\[ \forall \eps>0 \. \exists N :\. \forall m,n \geqs N \quad |x_m - x_n|<\eps \]
 \end{definition}
 
-\begin{property} \ \\
-	\begin{enumerate}
-		\item Фундаментальная последовательность ограничена
-		\item Сходящаяся последовательность фундаментальна
-		\item Если у фундаментальной последовательности есть сходящаяся подпоследовательность, то исходная последовательность сходится
-	\end{enumerate}
-\end{property}
+\medskip
+Свойства: \begin{enumerate}
+	\item Фундаментальная последовательность ограничена
+	\item Сходящаяся последовательность фундаментальна
+	\item Если у фундаментальной последовательности есть сходящаяся
+		  подпоследовательность, то исходная последовательность сходится
+\end{enumerate}
+\bigskip
 
 \begin{corollary}[Критерий Коши]
 	Последовательность сходится \iff она фундаментальна
@@ -294,13 +332,18 @@ bodyfont=\normalfont, qed=\qedsymbol
 
 \begin{definition}
 	\[ S_n = \sum_{k=1}^n a_k \]
-	Если последовательность $\{S_n\} \to S$, то последовательность наз. сходящейся, а $S$ -- сумма ряда. Если $\{S_n\}$ не имеет предела или \textbf{бесконечный} предел, то ряд расходится.
+	Если последовательность $\{S_n\} \to S$,
+	то последовательность наз. сходящейся, а $S$ -- сумма ряда.
+	Если $\{S_n\}$ не имеет предела или \textit{бесконечный} предел,
+	то ряд расходится.
 \end{definition}
+\bigskip
 
 \begin{theorem}[Необходимое условие сходимости ряда] \ \\
 	Если ряд $\DS \sum_{k=1}^n a_k$ сходится,
 	то $\DS \lim_{\ntoinf}a_n = 0$.
 \end{theorem}
+\bigskip
 
 Геометрическая прогрессия:
 	\[ S_n = \sum_{k=1}^n aq^{k-1} = a\frac{1-q^n}{1-q} \]
@@ -315,31 +358,32 @@ bodyfont=\normalfont, qed=\qedsymbol
        = \frac1{1\cdot2} + \frac1{2\cdot3} + \frac1{3\cdot4} + ... + \frac1{n(n+1)}
        = 1 - \frac1{n+1} \]
 \[ \lim_{\ntoinf}S_n = 1 \]
+\bigskip
 
-\begin{property} Свойства сходящихся рядов:
-  \begin{enumerate}
+Свойства сходящихся рядов:
+\begin{enumerate}
 	\item Ряд не может иметь двух различных сумм
 	\item В сходящемся ряду можно произвольно расставлять скобки
 		  (т.к. это будет подпоследовательность сходящейся последовательности)
 	\item Добавление и отбрасывание конечного членов ряда не влияет на сходимость (но изменяет сумму)
 	\item Сходящиеся ряды можно складывать и вычитать
 	\item Сходящийся ряд можно домножать на константу
-  \end{enumerate}
-\end{property}
+\end{enumerate}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Признаки сходимости рядов}
 
 \begin{property}
-	Если $a_k \geqs 0$, а последовательность $S_n$ ограничена сверху, то ряд сходится
+	Если $a_k\geqs0$, а последовательность $S_n$ ограничена сверху, то ряд сходится
 \end{property}
 
 \begin{property}[Признак сравнения]
 	Если $0 \leqs a_k \leqs b_k$, то:
 	\begin{itemize}
-		\item если ряд \rowbk сходится, то ряд \rowak $\,$ сходится
-		\item если ряд \rowak расходится, то ряд \rowbk $\,$ расходится
+		\def\rowbk{$\DS\sum_{k=1}^{\infty}b_k$\space}
+		\item если ряд \rowbk сходится, то ряд \rowak сходится
+		\item если ряд \rowak расходится, то ряд \rowbk расходится
 	\end{itemize}
 \end{property}
 
@@ -381,34 +425,45 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 	Если $a_n>0$ и существует $\DS \lim_{\ntoinf} \frac{a_{n+1}}{a_n}$,
 	то также существует и $\DS \lim_{\ntoinf} \sqrt[n]{a_n}$, и они равны.
 \end{theorem}
+\bigskip
 
 \begin{theorem}[Признак Лейбница]
-	Знакочередующийся ряд $a_1 - a_2 + a_3 - a_4 + ...$ с монотонно убывающим по абсолютной величине членом $a_1 \geqs a_2 \geqs a_3 \geqs ... > 0$
+	Знакочередующийся ряд $a_1 - a_2 + a_3 - a_4 + ...$
+	с монотонно убывающим по абсолютной величине членом
+	$a_1 \geqs a_2 \geqs a_3 \geqs ... > 0$
 	сходится \iff $\DS \lim_{\ntoinf} a_n = 0$
 \end{theorem}
+\begin{proof}
+	Построить последовательность вложенных отрезков из частичных сумм
+	$S_{2n-1}$, $S_{2n}$, $S_{2n+1}$, $S_{2n+2}$
+\end{proof}
+\bigskip
 
 Пример -- ряд Лейбница: $\DS 1-\frac13+\frac15-\frac17+\frac19-... = \frac\pi4$
+\bigskip
+
 
 \begin{definition}[Абсолютная сходимость] \ \\
-	Ряд \rowak $\,$ сходится абсолютно, если ряд $\DS\sum_{k=1}^{\infty}|a_k|$ сходится.
+	Ряд \rowak сходится абсолютно,
+	если ряд $\DS\sum_{k=1}^{\infty}|a_k|$ сходится.
 \end{definition}
 
 \begin{theorem}
 	Абсолютно сходящийся ряд сходится, причём
 	$\DS \left|\sum_{k=1}^{\infty}a_k\right| \leqs \sum_{k=1}^{\infty}|a_k|$
 \end{theorem}
-\begin{proof}
-	Рассмотрим $0 \leqs a_k + |a_k| \leqs 2|a_k|$
-\end{proof}
+\begin{proof} Рассмотреть $0 \leqs a_k + |a_k| \leqs 2|a_k|$ \end{proof}
 
 \bigbreak
 Пример: если сходится ряд $\DS \sum_{n=1}^{\infty}a_n^2$,
 то сходится и ряд $\DS \sum_{n=1}^{\infty}\frac{a_n}n$.
+\\ \Big(доказательство: из $\sqrt{ab}\leqs\frac12(a+b)$ \Big)
 
 \bigbreak
 Свойство: если ряд $\DS \sum_{n=1}^{\infty}a_n$ сходится,
 а ряд $\DS \sum_{n=1}^{\infty}b_n$ расходится,
-то ряд $\DS \sum_{n=1}^{\infty} (a_n + b_n)$ расходится.
+то ряд $\DS \sum_{n=1}^{\infty} (a_n + b_n)$ расходится
+(доказательство: \textit{от противного}).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -442,9 +497,10 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \begin{definition} Окрестность $+\infty$ -- любой луч $(E,+\infty)$ \end{definition}
 
 \begin{definition} Окрестность $-\infty$ -- любой луч $(-\infty,E)$ \end{definition}
+\bigskip
 
 \begin{definition}
-	$a$ -- предельная точка множества $E \subset \mathR$,
+	$a$ -- предельная точка множества $E \subset \RR$,
 	если $\ringU_a \cap E \neq \varnothing$ для любой $\ringU_a$
 \end{definition}
 
@@ -452,8 +508,9 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 Примеры:\begin{enumerate}
 	\item $[a,b]$ -- множество предельных точек $(a,b)$
 	\item $\{a\}$ -- предельная точка ряда $\{a_n\}\xrightarrow[\ntoinf]{}a$
-	\item $\varnothing$ -- нет предельных точек у одиночной точки $\{a\} \in \mathR$
+	\item $\varnothing$ -- нет предельных точек у одиночной точки $\{a\} \in \RR$
 \end{enumerate}
+\bigskip
 
 \begin{lemma}[Утверждение.]
   Следующие условия равносильны:
@@ -468,15 +525,17 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsubsection{Предел функции}
 
 \begin{definition}
-	Пусть дана функция $f$: $E\to\mathR$, заданная на множестве $E \subset \mathR$.
+	Пусть дана функция $f$: $E\to\RR$, заданная на множестве $E \subset \RR$.
 	Пусть $a$ -- предельная точка множества $E$.
-	Тогда $\DS \lim_{x \to a}f(x)=A$ (или $f(x) \xrightarrow[x \to a]{} A$),
+	Тогда $\DS \lim_{x \to a}f(x)=A$
+	\big(или $f(x) \xrightarrow[x \to a]{} A$ \big),
 	если выполнено любое из равносильных условий:
 	\begin{enumerate}
 		\item Для \any окрестности $U_A$ $\exists$ такая окрестность $\ringU_a$,
 			  что $f(\ringU_a \cap E) \subset U_A$
 		\item $\forall \eps>0 \. \exists \delta>0 \. \forall x \in E$,
-			  т.ч. $x \ne a$ $\implies$ $\left|f(x)-A\right|<\eps$
+			  т.ч. $x \ne a$ и $|x-a|<\delta$
+			  $\implies$ $\left|f(x)-A\right|<\eps$
 			  (определение по Коши)
 		\item Для \any последовательности $\{x_n\}$ точек из $E$ ($x_n\ne a$),
 			  т.ч. $\DS \lim_{\ntoinf}x_n = a$
@@ -484,23 +543,26 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 			  (определение по Гейне)
 	\end{enumerate}
 \end{definition}
+\bigskip
 
-\bigbreak
 Замечания к определению предела функции: \begin{enumerate}
 	\item Предел -- локальное свойство
 	\item Значение $f$ в точке $a$ не участвует в определении
 	\item Если в определении по Гейне \any последовательность $f(x_n)$ имеет предел,
-  		  то все эти пределы равны
+  		  то все эти пределы равны (иначе мы могли бы построить последовательность
+  		  перемешиванием, и она не имела бы предела)
+  	\item В определении по Гейне достаточно ограничиться \textit{только}
+  		  последовательностями, которые \textit{монотонно} стремятся к $a$
 \end{enumerate}
+\bigskip
 
-\bigbreak
 Свойства пределов: \begin{enumerate}
 	\item Предел единственный.
-	\item Локальная ограниченность: если $f\on E\to\mathR$, $a$ -- предельная точка $E$,
-  		  $\DS \lim_{x\to a}f(x)=A$ и $A \in \mathR$,
+	\item Локальная ограниченность: если $f\on E\to\RR$, $a$ -- предельная точка $E$,
+  		  $\DS \lim_{x\to a}f(x)=A$ и $A \in \RR$,
   		  то $\exists$ такая окрестность $U_a$, что $f(x)$ ограничена на $U_a \cap E$.
-	\item Стабилизация знака: если $f\on E\to\mathR$, $a$ -- предельная точка $E$,
-		  $\DS \lim_{x\to a}f(x)=A$ и $A \in \mathR \setminus \{0\}$,
+	\item Стабилизация знака: если $f\on E\to\RR$, $a$ -- предельная точка $E$,
+		  $\DS \lim_{x\to a}f(x)=A$ и $A \in \RR \setminus \{0\}$,
   		  то $\exists$ такая окрестность $U_a$,
   		  что знаки $f(x)$ при $x \in \ringU_a \cap E$ и $A$ совпадают.
 \end{enumerate}
@@ -509,11 +571,11 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsubsection{Арифметические действия с пределами}
 
 Пределы двух функций в точке можно складывать, вычитать, перемножать и делить (если предел нижней функции не равен 0).
-
+\bigskip
 
 \begin{theorem}[Предельный переход в неравенстве]
   Если \begin{enumerate}
-	\item $f,g :\, E\to\mathR$, $\;$ $a$ -- предельная точка $E$
+	\item $f,g :\, E\to\RR$, $\;$ $a$ -- предельная точка $E$
 	\item $f(x) \leqs g(x)$ при всех $x \in E \setminus \{a\}$
 	\item $\DS\lim_{x\to a}f(x)=A$, $\DS\lim_{x\to a}g(x)=B$
   \end{enumerate}
@@ -522,7 +584,7 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 
 \begin{theorem}[Теорема о сжатой функции (аналог теоремы о двух милиционерах)]
   Если \begin{enumerate}
-	\item $f,g,h :\, E\to\mathR$, $\;$ $a$ -- предельная точка $E$
+	\item $f,g,h :\, E\to\RR$, $\;$ $a$ -- предельная точка $E$
 	\item $f(x) \leqs g(x) \leqs h(x)$ при всех $x \in E \setminus \{a\}$
 	\item $\DS \lim_{x\to a}f(x)=\lim_{x\to a}h(x)=A$
   \end{enumerate}
@@ -532,13 +594,13 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsubsection{Односторонние пределы}
 
 \begin{definition}[Монотонная функция]
-	$f :\, E\to\mathR$ монотонно возрастает (убывает), если для \any $x \leqs y$
-	выполнено $f(x) \leqs f(y)$ (или $f(x) \geqs f(y)$)
+	$f :\, E\to\RR$ монотонно возрастает (убывает), если для \any $x \leqs y$
+	выполнено $f(x) \leqs f(y)$ \big(или $f(x) \geqs f(y)$\big)
 \end{definition}
 
 
 \begin{theorem}
-	Пусть $f:\, E\to\mathR$, $\;$ $a$ -- предельная точка множества $E_1=E \cap (-\infty,a)$.
+	Пусть $f:\, E\to\RR$, $\;$ $a$ -- предельная точка множества $E_1=E \cap (-\infty,a)$.
 	Тогда: \begin{itemize}
 		\item Если $f$ возрастает и ограничена сверху, то
 			  $\exists$ $\DS \lim_{x\to a-}f(x)$
@@ -552,7 +614,7 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsection{Непрерывность функции}
 
 \begin{definition}
-  $f\on E\to\mathR$ непрерывна в точке $a \in E$,
+  $f\on E\to\RR$ непрерывна в точке $a \in E$,
   если выполнено любое из равносильных условий:
   \begin{enumerate}
 	\item Если $a$ -- предельная точка, то $\DS \lim_{x\to a}f(x)=f(a)$
@@ -564,27 +626,39 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 		  $\DS \lim_{\ntoinf}x_n=a \implies \lim_{\ntoinf}f(x_n)=f(a)$
   \end{enumerate}
 \end{definition}
+\bigskip
 
 Непрерывные в точке $a$ функции можно складывать, вычитать, умножать и (если $g(a)\ne0$) делить.
-
 \bigbreak
+
 Следствия: \begin{enumerate}
-	\item Многочлены $\DS p(x)=\sum_{k=0}^n a_kx^k$ непрерывны на $\mathR$.
-	\item Рациональные функции (отношения многочленов $\DS \frac{p(x)}{q(x)}$)
+	\item Многочлены $\DS p(x)=\sum_{k=0}^n a_kx^k$ непрерывны на $\RR$.
+	\item Отношения многочленов $\DS \frac{p(x)}{q(x)}$ (рациональные функции)
 		  непрерывны во всех точках, в которых знаменатель не обращается в ноль.
 \end{enumerate}
+\bigskip
 
 \begin{theorem}[Теорема о стабилизации знака]
-	Если $f\on E\to\mathR$ непрерывна в точке $a \in E$ и $f(a)\ne0$,
+	Если $f\on E\to\RR$ непрерывна в точке $a \in E$ и $f(a)\ne0$,
 	то найдётся такая окрестность $U_a$, что знак $f(x)$ совпадает с $f(a)$.
 \end{theorem}
+\begin{proof} Следствие утверждения про пределы \end{proof}
+\bigskip
 
 \begin{theorem}[Непрерывность композиции]
-	Пусть $f\on D\to\mathR, \. g\on E\to\mathR \. f(D)\subset E$ и
+	Пусть $f\on D\to\RR, \. g\on E\to\RR \. f(D)\subset E$ и
 	$f$ непрерывна в точке $a\in D$, а $g$ непрерывна в точке $f(a)$.
 	Тогда $g \circ f$ непрерывна в точке $a$.
 \end{theorem}
+\begin{proof}
+	Доказывается по определению предела по Гейне. \\
+	Для пределов было бы неверно, т.к. композиция пределов
+	не обязательно будет пределом композиции, напр. для
+	$f(x)=x\sin\frac1x$ ($x\ne0$), $g(y)=\{1\Leftarrow y\ne 0 ,\. 0\Leftarrow y=0\}$
+\end{proof}
+\bigskip
 
+Пример: $\sin x$ непрерывен на $\RR$. \\
 Вспомогательное нер-во: если $0<x<\frac\pi2$, то $\sin x<x<\tg x$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -595,8 +669,16 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 	\circleone ограничена;
 	\circletwo принимает наибольшее и наименьшее значения
 \end{theorem}
+\begin{proof}
+	\circleone от противного:
+	\lets неограничена $\Rightarrow$ можно найти $\{x_n\}$ т.ч. $f(x_n)\to+\infty$.
+	Т.к. $\{x_n\}$ -- ограничена $\Rightarrow$ по т.Больцано-Вейерштрасса
+	найдётся $x_{n_k} \to c$ ... \\
+	\circletwo от противного:
+	\lets $f(x)<M$. Рассмотреть $g(x)=\frac1{M-f(x)}$ ...
+\end{proof}
+\bigskip
 
-\bigbreak
 Расширение теоремы: если функция $f$ непрерывна на $[a,+\infty]$,
 и $\exists$ конечный предел $\DS \lim_{x\to+\infty}f(x)$,
 то $f$ ограничена на $[a,+\infty]$.
@@ -609,25 +691,32 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 	Пусть $f$ непрерывна на $[a,b]$ и значения $f(a)$ и $f(b)$ разных знаков.
 	Тогда $\exists \, c \in (a,b)$, для которой $f(c)=0$.
 \end{theorem}
-\begin{proof}
-	Делением отрезка пополам...
-\end{proof}
+\begin{proof} Делением отрезка пополам \end{proof}
 
 \begin{corollary}
 	Пусть $f$ непрерывна на $[a,b]$ и $f(a)<y<f(b)$ или $f(b)<y<f(a)$.
 	Тогда $\exists$ такая точка $c\in(a,b)$, что $f(c)=y$.
 \end{corollary}
+\begin{proof} Рассмотреть $g(x)=f(x)-y$ \end{proof}
 
 \begin{corollary}
 	Если \textit{непрерывная} на \textit{отрезке} функция принимает какие-то два значения,
 	то она принимает и все значения, лежащие между ними.
 \end{corollary}
+\bigskip
 
-\begin{theorem}	Непрерывный образ отрезка -- отрезок. \end{theorem}
+\begin{corollary}Непрерывный образ отрезка -- отрезок\end{corollary}
+\begin{proof} Теорема Вейерштрасса + теорема Больцано-Коши \end{proof}
+\bigskip
 
 \begin{theorem}
 	Непрерывный образ промежутка -- промежуток (возможно, другого типа).
 \end{theorem}
+\begin{proof}
+	Показать, что значения функции $(m,M) \subset f\left(\intab\right) \subset [m,M]$,
+	где $\DS m=\inf_{x\in\intab}f(x)$, $\DS M=\sup_{x\in\intab}f(x)$
+\end{proof}
+\bigskip
 
 \CenterFigure{\linewidth}{bolcano-koshi-test-1.png}
 
@@ -645,7 +734,7 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \end{definition}
 
 \begin{theorem}
-	Пусть $f\on \intab\to\mathR$ непрерывна и строго монотонна,
+	Пусть $f\on \intab\to\RR$ непрерывна и строго монотонна,
 	$\DS m=\inf_{x \in \intab}f(x)$,
 	$\DS M=\sup_{x \in \intab}f(x)$.
 	Тогда:
@@ -655,13 +744,22 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 		\item $f^{-1}$ -- непрерывна на $\left<m,M\right>$
 	\end{enumerate}
 \end{theorem}
+\begin{proof}
+  \begin{enumerate}
+	\item Показать, что $f$ инъективна и сюръективна.
+	\item Монотонность $f^{-1}$ -- от противного.
+	\item Непрерывность $f^{-1}$ -- \href{https://stepik.org/lesson/9530/step/6}{показать},
+		  что в \any точке левый и правый пределы равны.
+  \end{enumerate}
+\end{proof}
+\bigskip
 
 Обратные тригонометрические функции:
 \begin{align*}
-	  & \arcsin: \left[ -1, 1 \right] \to \left[ -\frac\pi2, \frac\pi2 \right]
-	\\& \arccos: \left[ -1, 1 \right] \to \left[ 0, \pi \right]
-	\\& \arctg:  \mathR \to \left( -\frac\pi2, \frac\pi2 \right)
-	\\& \arcctg: \mathR \to \left( 0, \pi \right)
+	  & \arcsin:     \quad (\nearrow) \quad \left[ -1, 1 \right] \to \left[ -\frac\pi2, \frac\pi2 \right]
+	\\& \arccos:     \quad (\searrow) \quad \left[ -1, 1 \right] \to \left[ 0, \pi \right]
+	\\& \arctg: \;\; \quad (\nearrow) \quad \RR \to \left( -\frac\pi2, \frac\pi2 \right)
+	\\& \arcctg:  \, \quad (\searrow) \quad \RR \to \left( 0, \pi \right)
 \end{align*}
 
 \bigskip
@@ -676,9 +774,9 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 	   \lim_{x\to 0} \frac{\sin x}x &= 1
 	\\ \lim_{x\to 0} \left(x+1\right)^{1/x} &= e
 	\\ \lim_{x\to 0} \frac{\ln(1+x)}x &= 1
-	\\ \lim_{x\to 0} e^x &= 1+x
+	\\ \lim_{x\to 0} \frac{e^x-1}x &= 1
 	\\ \lim_{x\to 0} \frac{a^x-1}x &= \ln a    &(a>0)
-	\\ \lim_{x\to 0} \frac{(1+x)^p-1}x &= px   &(p \ne 0)
+	\\ \lim_{x\to 0} \frac{(1+x)^p-1}x &= p   &(p \ne 0)
 \end{align*}
 
 
@@ -686,8 +784,8 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsection{Эквивалентные функции}
 
 \begin{definition}[$f \sim g$ при $x \to a$]
-	Пусть $f,g\on E\to \mathR$, $a$ -- предельная точка $E$. \\
-	Если $\exists$ такая окрестность $\ringU_a$ и функция $\varphi\on E\to\mathR$,
+	Пусть $f,g\on E\to \RR$, $a$ -- предельная точка $E$. \\
+	Если $\exists$ такая окрестность $\ringU_a$ и функция $\varphi\on E\to\RR$,
 	что $f(x)=\varphi(x)g(x)$ при всех $x\in\ringU_a\cap E$
 	и $\DS \lim_{x\to a}\varphi(x)=1$,\\
 	то $f \sim g$ при $x\to a$ (или $\DS f \underset{x\to a}{\sim} g$).
@@ -720,8 +818,8 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 \subsubsection{o-малое}
 
 \begin{definition}[$o(f)$]
-	Пусть $f,g\on E\to\mathR$, $a$ -- предельная точка $E$.
-	Если $\exists$ окрестность $\ringU_a$ и функция $\varphi\on E\to\mathR$,
+	Пусть $f,g\on E\to\RR$, $a$ -- предельная точка $E$.
+	Если $\exists$ окрестность $\ringU_a$ и функция $\varphi\on E\to\RR$,
 	такая что $f(x)=\varphi(x)g(x)$ при всех $x\in\ringU_a\cap E$
 	и $\DS \lim_{x\to a}\varphi(x)=0$,\\
 	то $f = o(g)$ при $x\to a$ или $\DS f \underset{x\to a}{=} o(g)$
@@ -772,8 +870,8 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 
 
 \begin{definition}[Дифференцируемые функции]
-	Пусть $f\on\intab\to\mathR$ и $x_0\in\intab$. \\
-	$f$ -- дифференцируема в точке $x_0$, если $\exists$ такое $k\in\mathR$,
+	Пусть $f\on\intab\to\RR$ и $x_0\in\intab$. \\
+	$f$ -- дифференцируема в точке $x_0$, если $\exists$ такое $k\in\RR$,
 	что $f(x) = f(x_0) \hm+ k(x-x_0) \hm+ o(x-x_0)$ при $x\to x_0$.
 \end{definition}
 
@@ -783,21 +881,21 @@ $\DS\sum_{k=1}^\infty \frac1{k^2} = \frac{\pi^2}6 $
 	\[ f'(x_0) = \lim_{x\to x_0}\frac{f(x)-f(x_0)}{x-x_0}=
 			   = \lim_{h\to0}\frac{f(x_0+h)-f(x_0)}h \]
 \end{definition}
-
 \bigskip
+
 \begin{theorem}[Критерий дифференцируемости] \ \\
-	Пусть $f\on \intab\to\mathR$ и $x_0\in\intab$.
+	Пусть $f\on \intab\to\RR$ и $x_0\in\intab$.
 	Тогда след. утверждения эквивалентны:
 	\begin{enumerate}
 		\item $f$ дифференцируема в точке $x_0$
 		\item $f$ имеет в точке $x_0$ конечную производную
-		\item $\exists$ непрерывная в $x_0$ функция $\varphi\on\intab\to\mathR$
+		\item $\exists$ непрерывная в $x_0$ функция $\varphi\on\intab\to\RR$
 			  такая, что $f(x)-f(x_0) = \varphi(x)(x-x_0)$
 	\end{enumerate}
 	И если они справедливы, то $k=f'(x_0)=\varphi(x_0)$
 \end{theorem}
-
 \bigskip
+
 Бесконечные производные:
 $\DS \lim_{x\to x_0}\frac{f(x)-f(x_0)}{x-x_0} = \pm\infty$
 
@@ -809,18 +907,17 @@ $\DS f'_{\pm}(x_0) = \lim_{x\to x_0\pm}\frac{f(x)-f(x_0)}{x-x_0}$
 	Пусть
 	\begin{enumerate}
 		\item $f\on \intab \to \left<c,d\right>$
-		\item $g\on \left<c,d\right> \to \mathR$
+		\item $g\on \left<c,d\right> \to \RR$
 		\item $f$ -- дифференцируема в точке $x_0 \in\intab$
 		$g$ -- дифференцируема в точке $f(x_0)$
 	\end{enumerate}
 	Тогда $g \circ f$ дифференцируема в $x_0$ и
 	$(g \circ f)'(x_0) = g'(f(x_0)) \cdot f'(x_0)$
 \end{theorem}
-
-
 \medskip
+
 \begin{theorem}[Дифференцирование обратной функции]
-	Пусть $f\on\intab\to\mathR$ строго монотонна и непрерывна,
+	Пусть $f\on\intab\to\RR$ строго монотонна и непрерывна,
 	$f$ -- дифференцируема в точке $x_0 \in\intab$ и $f'(x_0) \ne 0$. \\
 	Тогда обратная функция $f^{-1}$ дифф. в точке $f(x_0)$ и
 	$\DS \left(f^{-1}\right)'\left(f(x_0)\right) = \frac1{f'(x_0)}$
@@ -831,20 +928,26 @@ $\DS f'_{\pm}(x_0) = \lim_{x\to x_0\pm}\frac{f(x)-f(x_0)}{x-x_0}$
 \subsection{Теоремы о среднем}
 
 \begin{theorem}[Теорема Ферма]
-	Пусть $f\on\intab\to\mathR$ дифференцируема в $x_0\in(a,b)$.
+	Пусть $f\on\intab\to\RR$ дифференцируема в $x_0\in(a,b)$.
 	Если $\DS f(x_0)=\max_{x\in\intab}f(x)$ или $f(x_0)=\min_{x\in\intab}f(x)$,
 	то $f'(x_0)=0$.
 \end{theorem}
+\bigskip
+
 
 \begin{theorem}[Теорема Ролля]
-	Пусть $f\on[a,b]\to\mathR$ непрерывна на $[a,b]$ и дифф. на $(a,b)$.
+	Пусть $f\on[a,b]\to\RR$ непрерывна на $[a,b]$ и дифф. на $(a,b)$.
 	Если $f(a)=f(b)$, то $\exists$ такая точка $c\in(a,b)$, что $f'(c)=0$.
 \end{theorem}
+\bigskip
+
 
 \begin{theorem}[Теорема Лагранжа]
-	Пусть $f\on[a,b]\to\mathR$ непрерывна на $[a,b]$ и дифф. на $(a,b)$.
+	Пусть $f\on[a,b]\to\RR$ непрерывна на $[a,b]$ и дифф. на $(a,b)$.
 	Тогда $\exists$ такая точка $c\in(a,b)$, что $f(b)-f(a)=f'(c)(b-a)$.
 \end{theorem}
+\bigskip
+
 
 \begin{theorem}[Теорема Коши]
 	...
